--- a/YoutubeStream.ipynb
+++ b/YoutubeStream.ipynb
@@ -6,7 +6,7 @@
       "name": "YoutubeStream.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN6NnXrTDJJhm/r81Fa7e7S",
+      "authorship_tag": "ABX9TyN2NuLcA+ueCf0HMxzQ35Cb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,14 +25,14 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/krtn0828/Colab-video-tools/blob/main/YoutubeStream.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/krtn0828/Colab-web-tools/blob/main/YoutubeStream.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "cellView": "form",
-        "id": "aOnNnSs4LFLM"
+        "id": "aOnNnSs4LFLM",
+        "cellView": "form"
       },
       "source": [
         "#@title 必要なライブラリのインストール\n",
@@ -188,6 +188,36 @@
         "data_url = \"data:video/mp4;base64,\" + b64encode(mp4).decode()\n",
         "contents = '<video  controls><source src=\"'+data_url+'\" type=\"video/mp4\"></video>'\n",
         "HTML(contents)\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "cellView": "form",
+        "id": "Sgm0sViU7nUh"
+      },
+      "source": [
+        "#@title Googleドライブのマウント (ファイルを保存する場合)\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "cellView": "form",
+        "id": "DKT3noM28JMb"
+      },
+      "source": [
+        "#@title 動画のダウンロード(Download Files to Google Drive)\n",
+        "url = \"https://www.youtube.com/watch?v=az3K9-aNTRA\" #@param {type:\"string\"}\n",
+        "dst = \"/content/drive/MyDrive/\" #@param {type:\"string\"}\n",
+        "%cd $dst\n",
+        "!youtube-dl $url"
       ],
       "execution_count": null,
       "outputs": []
