--- a/YoutubeStream.ipynb
+++ b/YoutubeStream.ipynb
@@ -6,7 +6,7 @@
       "name": "YoutubeStream.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN2NuLcA+ueCf0HMxzQ35Cb",
+      "authorship_tag": "ABX9TyPad4Jm4Ksdj4LdnjlDLRwz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -79,7 +79,7 @@
         "if not os.path.exists(\"templates\"):\n",
         "    os.mkdir(\"templates\")\n",
         "\n",
-        "url = '' #@param {type:\"string\"}\n",
+        "url = 'https://www.youtube.com/watch?v=2Y40Ma6HXbw' #@param {type:\"string\"}\n",
         "load_url = url\n",
         "def changeURL(url):\n",
         "  if \"localhost:8080\" in url:\n",
@@ -154,9 +154,6 @@
         "def get_good(id):\n",
         "    json = get_statistics(id)\n",
         "    return json[\"likeCount\"]\n",
-        "def get_bad(id):\n",
-        "    json = get_statistics(id)\n",
-        "    return json[\"dislikeCount\"]\n",
         "def get_count(id):\n",
         "    json = get_statistics(id)\n",
         "    return json[\"viewCount\"]\n",
@@ -177,9 +174,8 @@
         "    \n",
         "watch = get_count(video_id)\n",
         "good = get_good(video_id)\n",
-        "bad = get_bad(video_id)\n",
         "comment = get_comment(video_id)\n",
-        "data = \"Watch:\" + watch + \"/Good:\" + good +  \"/Bad:\" + bad + \"/Comment:\" + comment\n",
+        "data = \"Watch:\" + watch + \"/Good:\" + good + \"/Comment:\" + comment\n",
         "vnm = \"temp.mp4\"\n",
         "print(pycolor.RED+data+pycolor.END)\n",
         "ydl = youtube_dl.YoutubeDL({\"outtmpl\":vnm,\"format\":'18'})\n",
